Corrected sidebar item spacing and icon alignment

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,7 +1,10 @@
 /* ---GLOBAL/BODY--- */
 
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Open Sans", Helvetica, sans-serif;
+  font-size: 15px;
 }
 
 
@@ -16,7 +19,6 @@ body {
     grid-template-rows: 3rem 1fr 2rem;
     width: 100%;
     height: 100vh;
-    margin: auto;
 }
 
 .main {
@@ -62,15 +64,36 @@ body {
 
 .list-item {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   height: 2rem;
   padding: 0 1rem;
 }
 
+#inbox {
+  margin: 0;
+}
+
+#inbox img {
+  margin-right: 0.5rem;
+}
+
 .list-item:hover {
   background-color: #fbfbfb;
   cursor: pointer;
+}
+
+.list-btn {
+  display: none;
+}
+
+.list-item .list-btn:hover {
+  cursor: pointer;
+}
+
+/* This class can change the appearance of the button when you hover the list item (e.g. show the button) */
+.list-item:hover .list-btn {
+  background-color: blue;
+  display: block;
 }
 
 .add-list {
@@ -86,12 +109,16 @@ body {
   background-color: #fbfbfb;
 }
 
-.add-list__icon {
-  width: 20px;
+.icon {
+  width: 18px;
   color: white;
 }
 
 .add-list__title {
+  margin-left: 0.5rem;
+}
+
+.list-name {
   margin-left: 0.5rem;
 }
 
